--- a/index.html
+++ b/index.html
@@ -75,11 +75,25 @@
     }
 
     function getEnvironment() {
+      document.getElementById("os").append(liff.getOS())
+      document.getElementById("language").append(liff.getLanguage())
+      document.getElementById("version").append(liff.getVersion())
+      document.getElementById("accessToken").append(liff.getAccessToken())
+      document.getElementById("accessToken").append(liff.getAccessToken())
+      document.getElementById("isInClient").append(liff.isInClient())
+        if(liff.isInClient()){
+        document.getElementById("btnLogOut").style.display ="none"
+      }else {
+        document.getElementById("btnMsg").style.display ="none"
+        document.getElementById("btnScanCode").style.display ="none" 
+        document.getElementById("btnClose").style.display ="none" 
+        }
+      
     }
 
     async function main() {
       await liff.init({ liffId: "1654926245-zKNAn8P5" })
-      // getEnvironment()
+       getEnvironment()
       // getUserProfile()
       // getContext()
       // getFriendship()
