--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     console.log("Hello World!")
   </script> -->
 
-  <script src="https://static.line-scdn.net/liff/edge/versions/2.4.0/sdk.js"></script> 
+  <script src="https://static.line-scdn.net/liff/edge/versions/2.4.0/sdk.js"></script>
   <script>
     function createUniversalLink() {
     }
@@ -79,20 +79,19 @@
       document.getElementById("language").append(liff.getLanguage())
       document.getElementById("version").append(liff.getVersion())
       document.getElementById("accessToken").append(liff.getAccessToken())
-      document.getElementById("accessToken").append(liff.getAccessToken())
       document.getElementById("isInClient").append(liff.isInClient())
-        if(liff.isInClient()){
+      if(liff.isInClient()){
         document.getElementById("btnLogOut").style.display ="none"
       }else {
         document.getElementById("btnMsg").style.display ="none"
-        document.getElementById("btnScanCode").style.display ="none" 
-        document.getElementById("btnClose").style.display ="none" 
+        document.getElementById("btnScanCode").style.display ="none"
+        document.getElementById("btnClose").style.display ="none"
         }
-      
-    }
+      }
+    
 
     async function main() {
-      await liff.init({ liffId: "1654926245-zKNAn8P5" })
+      await liff.init({ liffId: "YOUR-LIFF-ID" })
        getEnvironment()
       // getUserProfile()
       // getContext()
