--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     
 
     async function main() {
-      await liff.init({ liffId: "YOUR-LIFF-ID" })
+      await liff.init({ liffId: "1654926245-zKNAn8P5" })
        getEnvironment()
       // getUserProfile()
       // getContext()
