--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
     }
 
     async function getUserProfile() {
+    const profile = await liff.getProfile()
+    document.getElementById("pictureUrl").src =profile.pictureUrl
+    document.getElementById("userId").append(profile.userId)
+    document.getElementById("statusMessage").append(profile.statusMessage)
+    document.getElementById("displayName").append(profile.displayName)
+
+
+
+
+
     }
 
     function getEnvironment() {
@@ -88,12 +98,12 @@
         document.getElementById("btnClose").style.display ="none"
         }
       }
-    
+
 
     async function main() {
       await liff.init({ liffId: "1654926245-zKNAn8P5" })
-       getEnvironment()
-      // getUserProfile()
+      getEnvironment()
+      getUserProfile()
       // getContext()
       // getFriendship()
       // createUniversalLink()
