--- a/index.html
+++ b/index.html
@@ -69,15 +69,20 @@
     }
 
     function getContext() {
+      document.getElementById("type").append(liff.getContext().type)
+      document.getElementById("viewType").append(liff.getContext().viewType)
+      document.getElementById("utouId").append(liff.getContext().utouId)
+      document.getElementById("roomId").append(liff.getContext().roomId)
+      document.getElementById("groupId").append(liff.getContext().groupId)      
     }
 
     async function getUserProfile() {
-    const profile = await liff.getProfile()
-    document.getElementById("pictureUrl").src =profile.pictureUrl
-    document.getElementById("userId").append(profile.userId)
-    document.getElementById("statusMessage").append(profile.statusMessage)
-    document.getElementById("displayName").append(profile.displayName)
-    document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
+      const profile = await liff.getProfile()
+      document.getElementById("pictureUrl").src =profile.pictureUrl
+      document.getElementById("userId").append(profile.userId)
+      document.getElementById("statusMessage").append(profile.statusMessage)
+      document.getElementById("displayName").append(profile.displayName)
+      document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
 
 
     }
@@ -102,8 +107,8 @@
       await liff.init({ liffId: "1654926245-zKNAn8P5" })
       getEnvironment()
       getUserProfile()
-      // getContext()
-      // getFriendship()
+      getContext()
+      getFriendship()
       // createUniversalLink()
     }
     main()
