--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
     }
 
     async function sendMsg() {
+      if (liff.getContext().type !== "none" && liff.getContext().type !== "external") {
+        await liff.sendMessage([
+          {
+            "type":"sticker",
+            "stickerId":1,
+            "packageIs":1
+        }])
+        alert("Message sent")
+}
     }
 
     function getContext() {
@@ -73,7 +82,7 @@
       document.getElementById("viewType").append(liff.getContext().viewType)
       document.getElementById("utouId").append(liff.getContext().utouId)
       document.getElementById("roomId").append(liff.getContext().roomId)
-      document.getElementById("groupId").append(liff.getContext().groupId)      
+      document.getElementById("groupId").append(liff.getContext().groupId)
     }
 
     async function getUserProfile() {
