--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
           {
             "type":"sticker",
             "stickerId":1,
-            "packageIs":1
-        }])
+            "packageId":1
+        }
+      ])
         alert("Message sent")
-}
+      }
     }
 
     function getContext() {
