--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       getUserProfile()
       getContext()
       getFriendship()
-      // createUniversalLink()
+      createUniversalLink()
     }
     main()
   </script>
