--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
     }
 
     function openWindow() {
+      liff.openWindow({
+        url:"https//line.me",
+        external:true
+      })
     }
 
     async function getFriendship() {
@@ -70,8 +74,6 @@
           Window.location ="https://lin.ee/ZjmgiYu"
         }
       }
-
-
 
     }
 
