--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
     function openWindow() {
       liff.openWindow({
-        url:"https//line.me",
-        external:true
+        url:"https://line.me",
+        external: true
       })
     }
 
