--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     }
 
     async function getFriendship() {
-  /*    const friend = await liff.getFriendship()
+      const friend = await liff.getFriendship()
       document.getElementById("friendship").append(friend.friendFlag)
       if (!friend.friendFlag) {
         if (confirm("คุณยังไม่ได้เพิ่ม Bot เป็นเพื่อน จะเพิ่มเลยไหม?")){
           Window.location ="https://lin.ee/ZjmgiYu"
         }
       }
-*/
+
     }
 
     async function sendMsg() {
