--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     }
 
     async function shareMsg() {
-      await liff.shareTargetPicker([
+      await liff.shareTargetPicker({
         "type": "text",
         "text": "This message was sent by ShareTargetPicker"
-      ])
+      })
     }
 
     function logOut() {
