--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     function logOut() {
       liff.logOut()
-      Window.location.reload()
+      window.location.reload()
     }
 
     function closed() {
